--- a/WebApplicationTravel/WebApplicationTravel.csproj
+++ b/WebApplicationTravel/WebApplicationTravel.csproj
@@ -155,6 +155,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905211608153_InitialCreate.cs" />
+    <Compile Include="Migrations\201905211608153_InitialCreate.Designer.cs">
+      <DependentUpon>201905211608153_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906041521013_migration1.cs" />
+    <Compile Include="Migrations\201906041521013_migration1.Designer.cs">
+      <DependentUpon>201906041521013_migration1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Connections.cs" />
     <Compile Include="Models\Country.cs" />
@@ -363,6 +372,14 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201905211608153_InitialCreate.resx">
+      <DependentUpon>201905211608153_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906041521013_migration1.resx">
+      <DependentUpon>201906041521013_migration1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
